--- a/app/globals.css
+++ b/app/globals.css
@@ -60,27 +60,19 @@ html.lenis body {
 /* 5. Dynamic Viewport Utilities */
 @layer utilities {
   .h-dynamic {
-    height: calc(var(--vh) * 100);
+    height: 100dvh;
   }
   
   .w-dynamic {
-    width: calc(var(--vw) * 100);
-  }
-
-  .h-dynamic-1\/2 {
-    height: calc(var(--vh) * 50);
-  }
-
-  .w-dynamic-1\/2 {
-    width: calc(var(--vw) * 50);
+    width: 100dvw;
   }
 
   .min-h-dynamic {
-    min-height: calc(var(--vh) * 100);
+    min-height: 100dvh;
   }
 
   .max-h-dynamic {
-    max-height: calc(var(--vh) * 100);
+    max-height: 100dvh;
   }
 }
 
