--- a/app/globals.css
+++ b/app/globals.css
@@ -130,6 +130,14 @@ html.lenis body {
   @apply font-medium;
 }
 
+.prose p {
+  opacity: 0;
+  transform: translateY(20px);
+  will-change: transform, opacity;
+  backface-visibility: hidden;
+  perspective: 1000px;
+ }
+
 /* 8. Typography & Media */
 .prose img {
   @apply m-0;
